--- a/logistics/logistics_info.html
+++ b/logistics/logistics_info.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<label>快件追踪</label>
-				<textarea class="form-control" rows="3" id="logistics_id"></textarea>
+				<textarea class="form-control" rows="3" id="logistics_id" placeholder="请输入单号"></textarea>
 				<button type="button" class="btn btn-danger btn-block" id="sub" onclick="sub()"> 货 件 追 踪 </button>
 			</div>
 		</div>
